--- a/PIDev_java/src/pidev_java/FXMLDocument.fxml
+++ b/PIDev_java/src/pidev_java/FXMLDocument.fxml
@@ -4,9 +4,9 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="415.0" prefWidth="585.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/16" fx:controller="formation.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="415.0" prefWidth="585.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/16" fx:controller="pidev_java.FXMLDocumentController">
     <children>
-        <Button fx:id="button" layoutX="126" layoutY="90" onAction="#handleButtonAction" text="Click Me!" />
+        <Button fx:id="button" layoutX="126" layoutY="90"  text="Click Me!" />
         <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
       <Button layoutX="126.0" layoutY="54.0" mnemonicParsing="false" text="Button" />
     </children>
