--- a/PIDev_java/src/UI/UI_candidature/AfficherCandidature.fxml
+++ b/PIDev_java/src/UI/UI_candidature/AfficherCandidature.fxml
@@ -12,6 +12,7 @@
    <children>
       <TableView fx:id="TableCandidature" layoutX="14.0" layoutY="180.0" prefHeight="435.0" prefWidth="867.0">
         <columns>
+            <TableColumn fx:id="tab_id" prefWidth="75.0" text="id" visible="false" />
           <TableColumn fx:id="tab_nom" prefWidth="75.0" text="Nom" />
           <TableColumn fx:id="tab_prenom" prefWidth="75.0" text="Prenom" />
             <TableColumn fx:id="tab_sexe" prefWidth="75.0" text="Sexe" />
@@ -22,7 +23,7 @@
             <TableColumn fx:id="tab_diplome" prefWidth="75.0" text="Diplome" />
             <TableColumn fx:id="tab_cv" prefWidth="75.0" text="CV" />
             <TableColumn fx:id="tab_date_candidature" prefWidth="75.0" text="Date de postulation" />
-            <TableColumn prefWidth="75.0" text="Action" />
+            <TableColumn fx:id="tab_edit" prefWidth="75.0" text="Action" />
         </columns>
       </TableView>
       <Button fx:id="btn_refreshCandidature" layoutX="648.0" layoutY="143.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="111.0" text="Refresh" />
