--- a/PIDev_java/src/UI/UI_candidature/ModifierCandidature.fxml
+++ b/PIDev_java/src/UI/UI_candidature/ModifierCandidature.fxml
@@ -1,14 +1,93 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.net.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.net.URL?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.UI_candidature.ModifierCandidatureController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.UI_candidature.ModifierCandidatureController">
     <stylesheets>
-        <URL value="@modifiercandidature.css"/>
+        <URL value="@modifiercandidature.css" />
     </stylesheets>
+   <children>
+      <Label layoutX="348.0" layoutY="10.0" prefHeight="58.0" prefWidth="312.0" text="Modifier candidature" textAlignment="RIGHT">
+         <font>
+            <Font size="31.0" />
+         </font>
+      </Label>
+      <VBox layoutX="198.0" layoutY="82.0" prefHeight="473.0" prefWidth="150.0" spacing="30.0">
+         <children>
+            <Label text="Nom">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Label text="Prenom">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Label text="Sexe">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Label text="Email">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Label text="Date de naissance">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Label text="Numero">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Label text="Status">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Label text="Diplome">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
+      <Button fx:id="btn_modifier" layoutX="821.0" layoutY="534.0" mnemonicParsing="false" onAction="#modifierCandidature" prefHeight="44.0" prefWidth="109.0" text="Modifier">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Button>
+      <VBox layoutX="374.0" layoutY="82.0" prefHeight="490.0" prefWidth="292.0" spacing="30.0">
+         <children>
+            <TextField fx:id="txtfield_nomedit" />
+            <TextField fx:id="txtfield_prenomedit" />
+            <ChoiceBox fx:id="choice_sexeedit" prefHeight="25.0" prefWidth="293.0" />
+            <TextField fx:id="txtfield_emailedit" />
+            <DatePicker fx:id="date_date_naissedit" prefHeight="25.0" prefWidth="293.0" />
+            <TextField fx:id="txtfield_numedit" />
+            <ChoiceBox fx:id="choice_statusedit" prefHeight="25.0" prefWidth="292.0" />
+            <ChoiceBox fx:id="choice_diplomeedit" prefHeight="25.0" prefWidth="293.0" />
+            <HBox prefHeight="100.0" prefWidth="200.0" />
+         </children>
+      </VBox>
+      <Button fx:id="btn_retour" layoutX="704.0" layoutY="534.0" mnemonicParsing="false" onAction="#gotoAfficherCandidature" prefHeight="44.0" prefWidth="109.0" text="Retour">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Button>
+      <TextField fx:id="txtfield_idedit" layoutX="21.0" layoutY="27.0" visible="false" />
+   </children>
 </AnchorPane>
