--- a/PIDev_java/src/gui/Quiz.fxml
+++ b/PIDev_java/src/gui/Quiz.fxml
@@ -2,48 +2,31 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.QuizController">
+<AnchorPane id="AnchorPane" fx:id="main_pane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.QuizController">
    <children>
-
-      <ScrollPane prefHeight="400.0" prefWidth="600.0">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="407.0" prefWidth="592.0">
-               <children>
-                  <TextField fx:id="tf_quiz" layoutX="382.0" layoutY="33.0" />
-                  <Label layoutX="255.0" layoutY="37.0" text="quiz" />
-                  <VBox layoutX="48.0" layoutY="76.0" prefHeight="200.0" prefWidth="100.0" />
-                  <VBox fx:id="vbox" layoutX="156.0" layoutY="110.0" prefHeight="200.0" prefWidth="412.0">
-                     <children>
-                        <GridPane fx:id="grid" prefHeight="44.0" prefWidth="361.0">
-                          <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="60.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="140.0" minWidth="10.0" prefWidth="140.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="140.0" minWidth="10.0" prefWidth="140.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                           <children>
-                              <Label text="Question" />
-                              <TextField id="tf_question" GridPane.columnIndex="1" />
-                              <Button id="btn_add_reponse" mnemonicParsing="false" onAction="#addReponse" text="+" GridPane.columnIndex="2" />
-                           </children>
-                        </GridPane>
-                     </children>
-                  </VBox>
-                  <Button id="btn_add_question" layoutX="534.0" layoutY="43.0" mnemonicParsing="false" onAction="#addQuestion" text="+" />
-                  <Button id="btn_add_quiz" layoutX="22.0" layoutY="47.0" mnemonicParsing="false" onAction="#addQuiz" text="ajouter" />
-               </children>
-            </AnchorPane>
-        </content>
-      </ScrollPane>
+      <Label fx:id="lb_text" layoutX="165.0" layoutY="149.0" text="Label" />
+      <TextField fx:id="tf_text" layoutX="271.0" layoutY="145.0" />
+      <HBox id="hb_btns" fx:id="hb_btns" layoutX="368.0" layoutY="333.0" prefHeight="34.0" prefWidth="200.0">
+         <children>
+            <Button fx:id="btn_next" mnemonicParsing="false" onAction="#nextQuestion" text="Suivant" />
+         </children>
+      </HBox>
+      <Label fx:id="lb_error" layoutX="271.0" layoutY="200.0" text="Label" visible="false" />
+      <GridPane fx:id="grid" layoutX="157.0" layoutY="66.0" prefHeight="30.0" prefWidth="262.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+      </GridPane>
    </children>
 </AnchorPane>
