--- a/PIDev_java/src/gui/Quiz.fxml
+++ b/PIDev_java/src/gui/Quiz.fxml
@@ -19,13 +19,14 @@
          </children>
       </HBox>
       <Label fx:id="lb_error" layoutX="271.0" layoutY="200.0" text="Label" visible="false" />
-      <GridPane fx:id="grid" layoutX="157.0" layoutY="66.0" prefHeight="30.0" prefWidth="262.0">
+      <GridPane fx:id="grid" layoutX="71.0" layoutY="68.0" prefHeight="50.0" prefWidth="478.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="119.0" minWidth="10.0" prefWidth="108.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="255.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="0.0" prefWidth="69.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="50.0" prefHeight="50.0" valignment="TOP" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
    </children>
