--- a/PIDev_java/src/UI/UI_formation/Formations.fxml
+++ b/PIDev_java/src/UI/UI_formation/Formations.fxml
@@ -3,10 +3,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="650.0" prefWidth="900.0" style="-fx-background-color: #f7f3e9;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="UI.UI_formation.FormationsController">
+<AnchorPane id="AnchorPane" prefHeight="895.0" prefWidth="1208.0" style="-fx-background-color: #f7f3e9;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.UI_formation.FormationsController">
    <children>
-      <AnchorPane prefHeight="650.0" prefWidth="267.0" style="-fx-background-color: #5eaaa8;" />
-      <VBox fx:id="VBox_formations" layoutX="274.0" layoutY="117.0" prefHeight="525.0" prefWidth="615.0" />
+      <AnchorPane layoutX="-3.0" prefHeight="895.0" prefWidth="270.0" style="-fx-background-color: #5eaaa8;" />
+      <VBox fx:id="VBox_formations" layoutX="274.0" layoutY="17.0" prefHeight="625.0" prefWidth="615.0" />
    </children>
 </AnchorPane>
