--- a/PIDev_java/src/gui/AddQuiz.fxml
+++ b/PIDev_java/src/gui/AddQuiz.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane id="AnchorPane" fx:id="main_pane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.QuizController">
+<AnchorPane id="AnchorPane" fx:id="main_pane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.AddQuizController">
    <children>
       <Label fx:id="lb_text" layoutX="165.0" layoutY="149.0" text="Label" />
       <TextField fx:id="tf_text" layoutX="271.0" layoutY="145.0" />
