--- a/PIDev_java/src/UI/UI_formation/Formations.fxml
+++ b/PIDev_java/src/UI/UI_formation/Formations.fxml
@@ -1,11 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+
 
 <AnchorPane id="AnchorPane" prefHeight="758.0" prefWidth="1208.0" style="-fx-background-color: #f7f3e9;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.UI_formation.FormationsController">
    <children>
       <AnchorPane layoutX="-3.0" prefHeight="895.0" prefWidth="270.0" style="-fx-background-color: #5eaaa8;" />
-      <VBox fx:id="VBox_formations" layoutX="274.0" layoutY="17.0" prefHeight="831.0" prefWidth="916.0" />
+      <ScrollPane layoutX="274.0" layoutY="102.0">
+         <content>
+            <VBox fx:id="VBox_formations" prefHeight="775.0" prefWidth="916.0" style="-fx-background-color: #f7f3e9;" />
+         </content>
+      </ScrollPane>
+      <Label layoutX="569.0" layoutY="31.0" prefHeight="51.0" prefWidth="257.0" text="Nos Formations" textFill="#da0707">
+         <font>
+            <Font size="35.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
