--- a/PIDev_java/src/gui/TakeQuiz.fxml
+++ b/PIDev_java/src/gui/TakeQuiz.fxml
@@ -6,23 +6,19 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.TakeQuizController">
+<AnchorPane id="AnchorPane" fx:id="main_pane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.TakeQuizController">
    <children>
-      <Label layoutX="82.0" layoutY="83.0" text="Quesiton" />
-      <Label fx:id="lb_question" layoutX="199.0" layoutY="83.0" text="Label" />
+      <Label fx:id="lb_text" layoutX="82.0" layoutY="83.0" text="Quesiton:" />
+      <Label fx:id="lb_question" layoutX="157.0" layoutY="83.0" text="Label" />
       <Label fx:id="lb_quiz" layoutX="199.0" layoutY="30.0" text="Label" />
-      <Button id="btn_next" layoutX="433.0" layoutY="266.0" mnemonicParsing="false" onAction="#nextQuestion" text="Next" />
+      <Button id="btn_next" fx:id="btn_next" layoutX="465.0" layoutY="347.0" mnemonicParsing="false" onAction="#nextQuestion" text="Next" />
       <TextField fx:id="tf_nbQuestion" layoutX="390.0" layoutY="58.0" visible="false" />
-      <GridPane fx:id="grid" layoutX="88.0" layoutY="130.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="372.0">
+      <GridPane fx:id="grid" layoutX="105.0" layoutY="130.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="372.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="310.0" minWidth="10.0" prefWidth="310.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="183.0" minWidth="10.0" prefWidth="68.0" />
         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="50.0" />
-         </rowConstraints>
       </GridPane>
    </children>
 </AnchorPane>
