--- a/PIDev_java/src/gui/ShowQuestion.fxml
+++ b/PIDev_java/src/gui/ShowQuestion.fxml
@@ -5,12 +5,13 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.ShowQuestionController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #0000;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.ShowQuestionController">
    <children>
-      <GridPane fx:id="grid" layoutY="54.0" prefHeight="302.0" prefWidth="414.0">
+      <GridPane fx:id="grid" layoutX="70.0" layoutY="36.0" prefHeight="305.0" prefWidth="474.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="162.0" minWidth="10.0" prefWidth="75.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="335.0" minWidth="10.0" prefWidth="335.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="128.0" minWidth="10.0" prefWidth="57.0" />
         </columnConstraints>
       </GridPane>
       <Button fx:id="btn_terminer" layoutX="464.0" layoutY="356.0" mnemonicParsing="false" onAction="#terminer" text="Terminer" />
