--- a/PIDev_java/src/UI/UI_formation/Formations.fxml
+++ b/PIDev_java/src/UI/UI_formation/Formations.fxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane id="AnchorPane" prefHeight="758.0" prefWidth="1208.0" style="-fx-background-color: #f7f3e9;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.UI_formation.FormationsController">
    <children>
@@ -20,5 +20,6 @@
             <Font size="35.0" />
          </font>
       </Label>
+      <FontAwesomeIconView glyphName="CLOSE" layoutX="1156.0" layoutY="42.0" onMouseClicked="#btn_close" size="30" />
    </children>
 </AnchorPane>
