--- a/PIDev_java/src/UI/UI_formation/ModifierFormation.fxml
+++ b/PIDev_java/src/UI/UI_formation/ModifierFormation.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -55,5 +56,6 @@
       <Button fx:id="btn_gotoAfficherFormation" layoutX="638.0" layoutY="494.0" mnemonicParsing="false" onAction="#btn_gotoAfficherFormaModif" text="Consulter" />
       <Button fx:id="btn_enregis_modif" layoutX="520.0" layoutY="494.0" mnemonicParsing="false" onAction="#btn_enregistrer_modif" text="Enregistrer" />
       <TextField fx:id="tf_ID_forma" layoutX="519.0" layoutY="175.0" visible="false" />
+      <FontAwesomeIconView glyphName="CLOSE" layoutX="759.0" layoutY="39.0" onMouseClicked="#btn_close" size="30" />
    </children>
 </AnchorPane>
