--- a/PIDev_java/src/UI/UI_formation/video_detail.fxml
+++ b/PIDev_java/src/UI/UI_formation/video_detail.fxml
@@ -5,12 +5,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.web.WebView?>
 
-<AnchorPane id="AnchorPane" prefHeight="548.0" prefWidth="909.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="UI.UI_formation.Video_detailController">
+<AnchorPane id="AnchorPane" prefHeight="548.0" prefWidth="909.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.UI_formation.Video_detailController">
     <stylesheets>
         <URL value="@video_detail.css" />
     </stylesheets>
    <children>
       <WebView fx:id="webView_Forma" layoutX="23.0" layoutY="45.0" prefHeight="491.0" prefWidth="875.0" />
-      <FontAwesomeIconView glyphName="CLOSE" layoutX="882.0" layoutY="27.0" size="15" wrappingWidth="12.428571701049805" />
+      <FontAwesomeIconView glyphName="CLOSE" layoutX="873.0" layoutY="30.0" onMouseClicked="#btn_close" size="30" wrappingWidth="12.428571701049805" />
+      <FontAwesomeIconView fx:id="id_back" glyphName="ARROW_CIRCLE_LEFT" layoutX="835.0" layoutY="30.0" onMouseClicked="#btn_back_list" size="30" />
    </children>
 </AnchorPane>
