--- a/PIDev_java/src/UI/OffreUI/DetailOffre.fxml
+++ b/PIDev_java/src/UI/OffreUI/DetailOffre.fxml
@@ -5,20 +5,21 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import org.controlsfx.control.GridView?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="459.0" prefWidth="666.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.OffreUI.DetailOffreController">
+<AnchorPane id="AnchorPane" prefHeight="474.0" prefWidth="824.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.OffreUI.DetailOffreController">
    <children>
-      <VBox prefHeight="459.0" prefWidth="200.0" style="-fx-background-color: #ad0505;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="466.0" AnchorPane.topAnchor="0.0">
+      <VBox layoutX="10.0" layoutY="10.0" prefHeight="456.0" prefWidth="192.0" style="-fx-background-color: #ad0505;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Pane prefHeight="94.0" prefWidth="181.0">
                <children>
-                  <Label layoutX="75.0" prefHeight="70.0" prefWidth="140.0" text="Recrutini" textFill="WHITE">
+                  <Label layoutX="75.0" layoutY="10.0" prefHeight="60.0" prefWidth="111.0" text="Recrutini" textFill="WHITE">
                      <font>
                         <Font size="26.0" />
                      </font>
@@ -78,7 +79,7 @@
                   <FontAwesomeIconView fill="WHITE" glyphName="GLOBE" size="14.0" />
                </graphic>
             </Button>
-            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" opacity="0.7" prefHeight="45.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="Connexion" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" opacity="0.7" prefHeight="45.0" prefWidth="174.0" style="-fx-background-color: #ad0505;" text="Connexion" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
                <font>
                   <Font name="Berlin Sans FB" size="13.0" />
                </font>
@@ -102,7 +103,7 @@
             </Button>
          </children>
       </VBox>
-      <Pane layoutX="188.0" layoutY="57.0" opacity="0.89" prefHeight="70.0" prefWidth="649.0" style="-fx-background-color: #ad0505;" AnchorPane.bottomAnchor="332.0" AnchorPane.leftAnchor="188.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="57.0">
+      <Pane layoutX="188.0" layoutY="54.0" opacity="0.89" prefHeight="70.0" prefWidth="649.0" style="-fx-background-color: #ad0505;">
          <children>
             <HBox layoutX="6.0" layoutY="22.0" prefHeight="41.0" prefWidth="513.0">
                <children>
@@ -126,7 +127,101 @@
             </HBox>
          </children>
       </Pane>
-      <Label fx:id="lb_id" layoutX="246.0" layoutY="157.0" text="Label" />
-      <GridView layoutX="325.0" layoutY="231.0" />
+      <VBox layoutX="192.0" layoutY="124.0" prefHeight="358.0" prefWidth="338.0">
+         <children>
+            <HBox prefHeight="28.0" prefWidth="360.0">
+               <children>
+                  <Label text="Post : " />
+                  <Text fx:id="lb_Post" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="319.13671875" />
+               </children>
+            </HBox>
+            <HBox prefHeight="30.0" prefWidth="360.0">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="58.0" text="Domaine :" />
+                  <Text fx:id="lb_domaine" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="300.13671875" />
+               </children>
+            </HBox>
+            <HBox prefHeight="47.0" prefWidth="415.0">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="62.0" text="objectif :" />
+                  <Text fx:id="lb_objectif" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="297.13671875" />
+               </children>
+            </HBox>
+            <HBox prefHeight="97.0" prefWidth="368.0">
+               <children>
+                  <VBox prefHeight="65.0" prefWidth="356.0">
+                     <children>
+                        <HBox prefHeight="41.0" prefWidth="356.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date Depot :" wrappingWidth="75.990234375" />
+                              <Label fx:id="lb_depo" prefHeight="40.0" prefWidth="209.0" text="Label" />
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="44.0" prefWidth="356.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date expiration :" wrappingWidth="95.853515625" />
+                              <Label fx:id="lb_expiration" prefHeight="30.0" prefWidth="209.0" text="Label" />
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="45.0" prefWidth="356.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Experience Minimale :" wrappingWidth="125.048828125" />
+                              <Label fx:id="leb_min" prefHeight="30.0" prefWidth="209.0" text="Label" />
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="35.0" prefWidth="356.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Experience Maximale :" wrappingWidth="122.076171875" />
+                              <Label fx:id="lb_max" prefHeight="26.0" prefWidth="214.0" text="Label" />
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
+            <HBox prefHeight="59.0" prefWidth="368.0">
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Description" />
+                  <Text fx:id="lb_description" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="306.13671875" />
+               </children>
+            </HBox>
+            <HBox prefHeight="20.0" prefWidth="368.0">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="85.0" text="salaire :" />
+                  <Text fx:id="lb_salaire" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="128.13671875" />
+               </children>
+            </HBox>
+            <HBox prefHeight="51.0" prefWidth="368.0">
+               <children>
+                  <Label prefHeight="22.0" prefWidth="94.0" text="Competences :" />
+                  <Text fx:id="lb_competence" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+      <VBox layoutX="535.0" layoutY="124.0" prefHeight="351.0" prefWidth="302.0">
+         <children>
+            <HBox alignment="CENTER" prefHeight="150.0" prefWidth="250.0">
+               <children>
+                  <ImageView fx:id="logo" fitHeight="150.0" fitWidth="211.0" pickOnBounds="true" preserveRatio="true" />
+               </children>
+            </HBox>
+            <HBox prefHeight="47.0" prefWidth="321.0">
+               <children>
+                  <Button alignment="CENTER" mnemonicParsing="false" onMouseClicked="#updateOffre" prefHeight="25.0" prefWidth="128.0" style="-fx-background-color: #ad0505;" text="Modifir" textFill="#f8f5f5">
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button alignment="CENTER" mnemonicParsing="false" onMouseClicked="#deleteOffre" prefHeight="25.0" prefWidth="148.0" style="-fx-background-color: #ad0505;" text="Supprimer" textFill="WHITE" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="47.0" prefWidth="321.0">
+               <children>
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#backToListe" prefHeight="25.0" prefWidth="148.0" style="-fx-background-color: #ad0505;" text="Retourner à la liste" textFill="WHITE" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
