--- a/PIDev_java/src/UI/OffreUI/ModifirOffreFXML.fxml
+++ b/PIDev_java/src/UI/OffreUI/ModifirOffreFXML.fxml
@@ -15,18 +15,18 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="423.0" prefWidth="654.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.OffreUI.AjouterOffreFXMLController">
+<AnchorPane id="AnchorPane" prefHeight="407.0" prefWidth="664.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.OffreUI.ModifirOffreFXMLController">
    <children>
-      <Pane prefHeight="78.0" prefWidth="787.0" style="-fx-background-color: #ad0505;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <Pane prefHeight="62.0" prefWidth="664.0" style="-fx-background-color: #ad0505;">
          <children>
-            <Label layoutY="4.0" prefHeight="70.0" prefWidth="161.0" text="Ajouter Offre" textFill="WHITE">
+            <Label layoutY="4.0" prefHeight="70.0" prefWidth="161.0" text="Modifir Offre" textFill="WHITE">
                <font>
                   <Font size="26.0" />
                </font>
             </Label>
          </children>
       </Pane>
-      <VBox layoutX="192.0" layoutY="79.0" prefHeight="296.0" prefWidth="463.0" AnchorPane.bottomAnchor="59.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="324.0" AnchorPane.topAnchor="80.0">
+      <VBox layoutY="78.0" prefHeight="268.0" prefWidth="336.0">
          <children>
             <HBox prefHeight="47.0" prefWidth="321.0">
                <children>
@@ -76,7 +76,7 @@
             </HBox>
          </children>
       </VBox>
-      <VBox layoutX="352.0" layoutY="80.0" prefHeight="284.0" prefWidth="302.0" AnchorPane.bottomAnchor="59.0" AnchorPane.leftAnchor="352.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="80.0">
+      <VBox layoutX="355.0" layoutY="78.0" prefHeight="268.0" prefWidth="309.0">
          <children>
             <HBox prefHeight="0.0" prefWidth="296.0">
                <children>
@@ -128,7 +128,7 @@
                   </Spinner>
                </children>
             </HBox>
-            <HBox prefHeight="47.0" prefWidth="321.0">
+            <HBox prefHeight="17.0" prefWidth="309.0">
                <children>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Experience Maximale" />
                   <Spinner fx:id="tfMaxVal" prefHeight="26.0" prefWidth="139.0">
@@ -140,9 +140,9 @@
             </HBox>
          </children>
       </VBox>
-      <HBox alignment="CENTER" layoutY="365.0" prefHeight="62.0" prefWidth="654.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="365.0">
+      <HBox alignment="CENTER" layoutX="10.0" layoutY="375.0" prefHeight="62.0" prefWidth="654.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
-            <Button contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#newOffre" prefHeight="32.0" prefWidth="199.0" style="-fx-background-color: #ad0505;" text="Ajouter" />
+            <Button contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#UpdateOffre" prefHeight="32.0" prefWidth="199.0" style="-fx-background-color: #ad0505;" text="Modifir" textFill="WHITE" />
          </children>
       </HBox>
    </children>
